<resources>
    <string name="app_name">FarmaJuy</string>
    <string name="btn_omitir">Omitir</string>
    <string name="txt_registrar">¿No sos usuario? Registrate como:</string>
    <string name="button_sifarmacia">Sitios de Farmacias</string>
    <string name="button_busq_prod">Busqueda de Producto</string>
    <string name="button_miubicacion">Mi Ubicación</string>
    <string name="imagegooglemaps">Imagen de Google Maps</string>
    <string name="imageninicio1">Imagen del Logo</string>
    <string name="title_activity_maps_sitios">Map</string>
    <string name="title_activity_maps_mi_ubicacion">Map</string>

    <string name="button_agregar_producto">Agregar producto</string>
    <string name="button_modificar_stock">Modificar stock</string>


    <string name="ingrese_nombre_producto">Ingrese Nombre del Producto</string>
    <string name="info_usuario">¡FarmaJuy le permite consultar la disponibilidad del producto que busca
    en las farmacias cercanas! ¡Use nuestro buscador y compruébelo usted mismo!</string>
    <string name="button_buscar">Buscar</string>
    <string name="las_siguientes_farmacias_cercanas_poseen_disponibilidad_del_medicamento_que_ha_buscado">Las siguientes farmacias cercanas poseen disponibilidad del medicamento que ha buscado:</string>
    <string name="title_activity_mapa_farmacia">Map</string>
</resources>