<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity_menu">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="196dp"
                tools:layout_editor_absoluteY="311dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="113dp"
                        android:contentDescription="@string/imagegooglemaps"
                        app:srcCompat="@drawable/googlemaps" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="271dp"
                        android:contentDescription="@string/imageninicio1"
                        app:srcCompat="@drawable/inicio1" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_sitfar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:onClick="Sitios"
                    android:text="@string/button_sifarmacia"
                    app:backgroundTint="@color/purple_700" />

                <Button
                    android:id="@+id/btn_tipmap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:onClick="Busqueda"
                    android:text="@string/button_busq_prod"
                    app:backgroundTint="@android:color/holo_orange_dark" />

                <Button
                    android:id="@+id/btn_ubicacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:onClick="Ubicacion"
                    android:text="@string/button_miubicacion"
                    app:backgroundTint="@android:color/holo_purple" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>